<resources>
    <string name="app_name">Multi-Game</string>
    <string name="create_player_bienvenue">Bienvennue !</string>
    <string name="create_player_validate">Valider !</string>
    <string name="create_player_player">Joueurs !</string>
    <string name="create_player_nom">Nom</string>
    <string name="create_player_prenom">Prénom</string>
    <string name="create_player_age">Age</string>
    <string name="create_player_localisation">Localisation</string>
    <string name="location_lat_lng">Lat : %.2f Lon : %.2f</string>
    <string name="display_player_title">Liste de joueurs</string>

    <string name="drag_n_drop">Drag N Drop</string>
    <string name="fast_tap">Fast tap</string>
    <string name="settings">Settings</string>
    <string name="ipac">Ipac</string>
    <string name="swipe">Swipe</string>

    <string name="commencer">commencer !</string>

    <string name="time_left">temps restant : %d secondes</string>
    <string name="score">score : %d</string>
</resources>