<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingEnd="30dp"
    android:paddingStart="30dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/create_player_bienvenue"
        android:textSize="30sp"/>

    <ImageView
        android:id="@+id/create_player_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/star">
    </ImageView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>

    <EditText
        android:id="@+id/create_player_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_player_nom"
        android:layout_marginTop="20dp"
        android:background="@drawable/square_corner"
        android:padding="10dp"
        android:inputType="textPersonName"/>


    <EditText
        android:id="@+id/create_player_prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_player_prenom"
        android:layout_marginTop="20dp"
        android:background="@drawable/square_corner"
        android:padding="10dp"
        android:inputType="textPersonName"/>


    <EditText
        android:id="@+id/create_player_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_player_age"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:layout_marginTop="20dp"
        android:background="@drawable/square_corner"
        android:padding="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/create_player_localisation"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/create_player_localisation"

        android:background="@drawable/square_corner"
        android:padding="10dp"/>

        <ImageView
            android:id="@+id/create_player_compas"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/compas">
        </ImageView>

    </LinearLayout>



    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/create_player_player"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create_player_player"
        />


    <Button
        android:id="@+id/create_player_validate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create_player_validate"
        android:layout_marginBottom="60dp"/>







</LinearLayout>

</layout>